# elastic-password-setter

./: pyproject.toml  settings.yaml
elastic_password_setter/: __main__.py  di.py  elastic_password_setter.py  settings.py
